# django-e2ee-chat

./: .commitlintrc.json  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  development.sh  docker-compose.yml  package.json  pyproject.toml  vite.config.js
.github/workflows/: scc.yml  todos.yml
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/assets/: App.vue  main.js
chat/assets/components/: ImageCropper.vue  InviteInput.vue  StaggeringListTransition.vue  WaffButton.vue  WaffModal.vue
chat/assets/pages/: Error.vue  Index.vue  Register.vue
chat/assets/router/: index.js  routes.js
chat/assets/utils/: api.js  cryptoStore.js
chat/migrations/: 0001_initial.py  0002_auto_20210427_2200.py  0003_alter_profile_session_key.py  0004_auto_20210605_1158.py  0005_auto_20210606_0052.py  0006_auto_20210606_0752.py  0007_alter_room_name.py  0008_auto_20210606_0808.py  0009_alter_room_image.py  0010_alter_room_image.py  0011_alter_room_image.py  0012_alter_room_image.py  0013_alter_room_image.py  0014_alter_room_image.py  0015_alter_room_image.py  0016_alter_room_image.py  0017_alter_message_date.py  0018_alter_message_date.py  0019_message_author.py  0020_roominvite.py
chat/static/: manifest.json
chat/templates/_partials/: layout.html
chat/templates/chat/: index.html
chat/templatetags/: vite.py
chat/utils/: base58.py
django_chat/: asgi.py  settings.py  urls.py
django_chat/utils/: base58.py
docs/: backend.md  description.md  spec.md
media/room_images/: blob  blob_TKgTtgq
