[tool.poetry]
name = "django_e2ee_chat"
version = "1.0.0"
description = ""
authors = ["Kasper Seweryn <github@wvffle.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-environ = "^0.4.5"
djangorestframework = "^3.12.4"
pycryptodome = "^3.10.1"
Pillow = "^8.2.0"
channels = "^3.0.3"
msgpack = "^1.0.2"
u-msgpack-python = "^2.7.1"

[tool.poetry.dev-dependencies]
commitizen = "^2.17.0"
pre-commit = "^2.12.0"
django-proxy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
